feat: add custom-header and custom-background support; bump to 1.3.1

--- a/themes/ayan-modern/style.css
+++ b/themes/ayan-modern/style.css
@@ -1,10 +1,10 @@
 /*
 Theme Name: Ayan Modern
-Theme URI: https://github.com/ayanozturk/ayan-modern
+Theme URI: https://github.com/ayanozturk/ayan-wp-theme
 Description: A modern, clean theme for personal website and blog with focus on readability and professional appearance
-Version: 1.3
+Version: 1.3.1
 Author: Ayan Ozturk
-Author URI: https://ayanozturk.dev
+Author URI: https://ayanozturk.com
 Copyright: 2025 Ayan Ozturk
 Tags: blog, custom-logo, custom-menu, featured-images, responsive-layout, right-sidebar, threaded-comments, translation-ready
 License: MIT License
